# NovaSearch

./: .gitignore  BUILD.md  CHANGELOG.md  INSTALL.md  README.md  build-deb-daemon-only.sh  build-deb-manual.sh  build-deb.sh  build.sh  check_plugin.sh  install.sh  integration_test.sh  meson.build  meson_options.txt  novasearch-daemon.service  simple_integration_test.sh
daemon/: Cargo.toml
daemon/examples/: watcher_demo.rs
daemon/src/: config.rs  database.rs  lib.rs  main.rs  models.rs  paths.rs  scanner.rs  watcher.rs
debian/: changelog  control  copyright  novasearch.install  novasearch.postinst  novasearch.prerm  novasearch.toml  rules
panel/: Makefile  README.md  meson.build  novasearch-panel.desktop
panel/src/: database.c  database.h  main.c
panel/tests/: test_database.c  test_database_query.c  test_keyboard_shortcut.c  test_main.c
